--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.6",
+    "@astrojs/react": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "astro": "^4.4.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
